# PubFitnessStudio-webapp

./: README.md  auth_utils.py  db_utils.py  main.py  models.py  pubfitnessstudio.db  pyproject.toml  requirements.txt
src/pages/: Index.tsx
static/: data.csv
templates/: admin_base.html  admin_dashboard.html  calculator_page.html  contact_admin.html  home_page.html  login.html  profile_page.html  register.html  update_user_details.html  user_base.html
