[project]
name = "pubfitnessstudio-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "SatyaHimavanth",email = "himavantht31@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jwt (>=1.4.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask[async] (>=3.1.2,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
